--- a/gb/ncid282_4.md
+++ b/gb/ncid282_4.md
@@ -16,6 +16,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11653194.md#1" target="_blank">海外侨青：台湾人把握2020选票 捍卫自由民主</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11653194.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/7390a3c79e486a3a87a8580977a5e107-150x120.jpg" align ="left"></a>首届“全球海外青年侨务论坛”10日至13日在台北登场。与会侨青代表、来自纽约的代表许伯丞表示，中共摧毁香港一国两制承诺，台湾人不要相信中共政权的话，更不要相信“把台湾未来寄托在对岸的候选人”，2020总统大选，希望世界上所有侨胞与岛内台湾人，持续支持自由民主的台湾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 2:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11653121.md#1" target="_blank">台商砸钱监控 何韵诗手机被植间谍软体</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11653121.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/9c1f256400b94bbfcef484eaa5e28483-150x120.jpg" align ="left"></a>有媒体报导，近期只要有支持“反送中”的人士来台，就会有自称是“大陆台商”的人士，花钱委托征信社进行监控，手机甚至还会被植入间谍软体，通话内容及GPS定位等都会被掌握，包含香港艺人何韵诗、众志秘书长黄之锋在内，至少超过10人遭到跟监。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 11:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11651857.md#1" target="_blank">中国猪肉危机超乎想像 影响全球市场</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11651857.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1909091340312436-150x120.jpg" align ="left"></a>非洲猪瘟病毒席卷中国，中国猪肉价格飙涨，此危机已对全球市场造成影响，甚至是结构性改变。目前中国国内的猪瘟疫情此起彼伏，其引发的“连锁效应”引发国际关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 10:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662461.md#1" target="_blank">每日三退声明精选（2019/11/17）</a><br></h3>力挺香港同胞，大陆人民不全部都是唯利是图的人，很多很多都是有良知的，很多人民都是支持香港同胞争取自由民主的，关于国内媒体的新闻跟下面的评论，都是官方水军的，媒体新闻跟评论根本就不让发表任何反对声音，我们只有在心里默默支持，请外界同胞不要相信大陆的媒体宣传跟评论，大陆千千万万人跟你们站在一起，只是发表不出来，我们爱这个国家，爱这个民族，只是不爱这个邪党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661177.md#1" target="_blank">每日三退声明精选（2019/11/16）</a><br></h3>曾留学多年返回国内，有比较才知道透明的西方是充满人性的社会，而国内一切都是暗黑，在一党独裁专制下遍地腐败，道德全面堕落，根源就是这个党。现有身边明白人指点翻墙，特此声明，退出被拉入的所谓共青团和曾加入的所谓少先队。做中华儿女，不做马列子孙。天佑平安。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 9:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11660831.md#1" target="_blank">前男友用不雅照威胁 福州女大学生遭吞药自杀</a><br></h3>“我马上把你的不雅照放学校论坛！”“明天我就去调查你爸妈，给叔叔阿姨惊喜！”10月17日，在福建福州外语外贸学院读大四的小静（化名 ）收到前男友发来的威胁信息。28日，小静吞下200颗药片自杀，被发现时她全身抽搐、口吐白沫。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 2:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11660778.md#1" target="_blank">广东智障女孩遭多次性侵 8个月内二次怀孕</a><br></h3>广东茂名信宜市，存在智力障碍问题的12岁女孩小文（化名）被曝多次遭性侵，8个月内怀孕两次，并两次进行流产手术。11月16日，小文的家属表示，小文在今年3月就曾遭性侵怀孕，不料10月份再遭性侵。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 1:36 PM							</td></tr>
@@ -28,6 +29,5 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11652084.md#1" target="_blank">每日三退声明精选（2019/11/12）</a><br></h3>郑重声明：从今日起退出曾经在中共加入过的少先队和共青团组织，了解到中共邪党腐败透顶，欺压百姓，香港事件更暴露其残暴嘴脸，自愿退出邪党的所有组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 12:26 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/12/n11649361.md#1" target="_blank">前中共人大代表离婚 争夺近五千万加元家产</a><br></h3>前中国全国人大代表何耀棣与安省女子离婚后，正在争夺4,736万加元的多伦多家产。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 10:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/12/n11650326.md#1" target="_blank">广东男生凌晨遭同学围殴2小时</a><br></h3>11月6日，广东茂名市高州某中学，男生小黄被一帮学生从宿舍拉到另一间宿舍内群殴，整个过程从凌晨1点多持续到3点。小黄被打致腰1椎左侧横突骨折，双侧额部头软组织肿胀。他的父亲看到视频后泣不成声。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 5:12 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/12/n11649948.md#1" target="_blank">双十一妻贷款购物30余万元 丈夫无奈欲跳楼</a><br></h3>双十一，大陆民众疯狂购物，或许有很多便宜“福利”，但是狂买也会有让人承受不住的时候。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 3:07 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/ncid282_4.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/ncid282_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_4.htm">http://www.epochtimes.com/gb/ncid282_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
