--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -17,9 +17,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11696102.md#1" target="_blank">横河评论：王立强投诚为何掀巨浪</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11696102.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/019-11-2811.32-600x400-150x120.jpg" align ="left"></a>主持人：上个周末，香港的区议会选举是牵动了全世界关注的目光，但是比香港选举更劲爆的是中共特工王立强的投诚，澳大利亚电视台《60分钟》特别节目一播出，就像在中港台投下了一个巨大的震撼弹，引起了舆论沸腾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 7:34 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695249.md#1" target="_blank">海风：“千人计划”为何变成了“坑人计划”</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695249.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/VCG31489511650-150x120.jpg" align ="left"></a>朝庭广纳贤才，这无疑是古今中外执政者的一种美德。然而，借招揽人才之名，用重金鼓励他人去盗窃“老东家”的知识产权，这种“招贤纳士”性质就完全变了。鼓励他人以做贼的方式来壮大自己，这不仅是偷窃者在犯罪，而鼓励他人去盗窃的人更为可耻，甚至招来世人公愤。中共的“千人计划”就是—个最好的案例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:35 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695017.md#1" target="_blank">王行：中共特工们的恐慌与退路</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695017.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/19-11-29.55-150x120.jpg" align ="left"></a>自前中共间谍王立强叛逃澳洲之后，首先揭露了他的老板向心夫妇都是中共高级间谍，因此向心夫妇很快在台被扣留，这不仅吓坏了中共，也震惊了世界。我想不只是香港、台湾、澳洲三地的中共特工们为之提心吊胆，被安置到世界各地的中共特务都会特别关注这件事情的进展，他们怀着怎样的心情浏览这些信息？是好奇还是恐慌？只有他们自己知道。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 10:54 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695093.md#1" target="_blank">周晓辉：中共走投无路 中南海做垂死挣扎</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695093.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-179-150x120.jpg" align ="left"></a>英文大纪元“美国思想领袖频道”记者日前采访了美国中国问题专家林蔚。林蔚在谈到中国当前的政局时表示：“我认为中国正在进人一个与当年苏联解体类似的时期，并不是说中共政权一旦垮台整个中国就崩溃了。中共垮台之时，国家还会在，房子还会在。只是政体发生了变化。”
-
-林蔚还指出，中共政府非常清楚它在国内已经是死到临头。他透露一个.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:01 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11700683.md#1" target="_blank">渔夫：两个世界的华为（被删网文）</a><br></h3>这个世界上，一定存在着两个华为：一个是孟晚舟的华为，一个是李洪元的华为。孟晚舟的华为有国家大叙事的加持，越来越矫情，也越来越傲娇；李洪元的华为则脱去一切伪装，越来越真实，越来越卑微。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 11:37 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11699922.md#1" target="_blank">雪绮：亡共大戏中的选择</a><br></h3>特务出逃事件，想必已为“天灭中共”、令世人所深切期待的亡共大戏，揭开了精彩的序幕！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 6:25 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11699657.md#1" target="_blank">理悟：人不可欺天更不可欺</a><br></h3>中共是什么？
 中共是流氓。
