--- a/gb/ncid282_3.md
+++ b/gb/ncid282_3.md
@@ -19,7 +19,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664497.md#1" target="_blank">广东女子上午查出怀孕下午就被炒 提起诉讼</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664497.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15d89ed0f6c5e18e_ttl7dayTxn_VCG111221733448-150x120.jpg" align ="left"></a>广东珠海一女子检查出怀孕后，当天就被公司炒了鱿鱼。女子自然流产后，提起诉讼。近日，该事件有了结果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 5:05 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11663391.md#1" target="_blank">鼠疫疫情遭封 医师：中共处理方式让人害怕</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11663391.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/mastomys-491576-150x120.jpg" align ="left"></a>据中国大陆官方资料，截至目前中国已有3例鼠疫确诊病例，但因为中国内部严格封锁疫情资讯，也让邻近国家格外紧张。对此，医师蔡依橙就在脸书发文表示，网络时代鼠疫控制容易做到，不过中国却由于政府爱面子，且必须维持表面鼠疫的和谐，选择让相关的新闻与讯息消失，鼠疫并不令人害怕，中国政府的处理才是真正令人害怕的原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 2:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664213.md#1" target="_blank">“加水就能跑”的杭州青年汽车宣告破产</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664213.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/VCG11441882805-150x120.jpg" align ="left"></a>因“水氢发动机”而出名的杭州青年汽车集团有限公司于近日宣布破产。青年汽车曾被指“骗取政府补贴”，就在上个月，获得了1.18亿元的财政补贴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 1:58 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11663869.md#1" target="_blank">韩国瑜质疑台独 赖清德：其实你不懂我们的心</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11663869.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/412967-150x120.jpg" align ="left"></a>高雄市长韩国瑜今（18）日质疑赖清德的台独立场，赖清德回应“其实你不懂我们的心”今天晚间并在脸书回应，台湾已经是个主权独立的国家，名字叫中华民国，与中国互不隶属，执政后不必另外宣布台湾独立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:13 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11680835.md#1" target="_blank">每日三退声明精选（2019/11/25）</a><br></h3>我目前在维州念书，之前在中国读大学的时候为了个人上进，并没有太多的了解中共的本质，随大流入了党。但是出国之后接触到了国外的信息之后慢慢思想有些变化。很多时候觉得国内的教育很有问题，让人变的没有逻辑性，不会去自主思考前因后果做出自己的判断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 9:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11678984.md#1" target="_blank">妈妈辅导女儿功课发脾气 外公23年前早料到</a><br></h3>“不写作业母慈子孝，一写作业鸡飞狗跳”，这是大陆许多辅导孩子功课的家长真实的写照。近日，上海一位妈妈被不认真做功课的女儿气到抓狂，连连咆哮，没想到却乐坏了她的老父亲和老母亲。原来23年前，她的父亲给她辅导功课时就是这样，当时他甚至还气愤的写下了一封家书。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11678963.md#1" target="_blank">6厘米钻头打穿新房楼板 开封女屋主被吓呆</a><br></h3>装修新房本是高兴的事，可河南开封市尉氏县居民郑女士在装地板时却被自己的新房吓了一跳。近日，她反映，交房时她发现其中一卧室楼板中间部分凹陷，且房间地面有多处明显裂痕；在铺装木地板打地板龙骨时，楼板竟被6厘米的钻头打穿。开发商对此声称，这并不影响居住，若要退房，郑女士须还清按揭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11678880.md#1" target="_blank">南昌初一学生校服收费2300元 家长难接受</a><br></h3>近日，江西南昌县的舒先生反映，孩子在该县豫章师院附属学校读初一，学校要求家长交钱统一买校服，费用实在太高，令家长难以接受。据了解，该校订购的校服共13件，费用总计2300元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 2:25 PM							</td></tr>
