--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -16,7 +16,15 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697525.md#1" target="_blank">一位中国老人的心声：做中华儿女 不当马列子孙</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697525.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/03/1003141612551366-150x120.jpg" align ="left"></a>中央电视台的发言人经常发表演说，强烈谴责外国反华势力粗暴干涉中国内政，现在的中国人也一起跟着骂外国势力，表现着爱国主义。可是谁都没有认真的想一想，什么才是真正的外国反华势力，也就无知的将中共自己才是真正的反华势力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:48 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697465.md#1" target="_blank">王友群：中央政法委在香港制造“暴乱”</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697465.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/1907280059051758-150x120.jpg" align ="left"></a>中共说，香港的“暴乱”是美国的“黑手”和香港的“暴徒”制造出来的。这是彻头彻尾的谎言。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 7:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697043.md#1" target="_blank">程晓容：中共走进死胡同 新疆香港折射全局</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697043.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912020146081501-150x120.jpg" align ="left"></a>为什么说中共把自己逼入了死胡同？新疆和香港的事态足以说明全局。中共在这两个地区采用了同样性质的统治手段：暴力压制和谎言欺骗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:22 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11696544.md#1" target="_blank">袁斌：“走投无路”与“难以想像的惊涛骇浪”</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11696544.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/content_625-44-01-150x120.jpg" align ="left"></a>日前，美国中国问题专家、宾夕法尼亚大学国际关系和中国历史教授林蔚（Arthur Waldron）接受了英文《大纪元时报》“美国思想领袖”节目的专访，谈及中共高层的内部状况，这位美国专家表示，中共政府非常清楚，它已死到临头了。他透露说，一名和习近平关系密切的中共高层幕僚曾坦率地对他说：“林蔚，我们已经走投无路了，每个人都.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:14 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702213.md#1" target="_blank">陆客：找回初心 退出邪党</a><br></h3>初心：我想做条中国龙
+现实：中共是个寄生虫
+初心：我想做个好清官
+现实：中共一群贪腐烂
+
+初心：我想保家卫国
+现实：中共保党卖国
+初心：我想富国安民
+现实：中共祸国殃民......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 2:55 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11701848.md#1" target="_blank">袁斌：从《共产党宣言》看共产主义的破坏性</a><br></h3>共产主义运动是人类历史上最大的浩劫，最大的噩梦，其为祸之烈，古往今来，可谓无出其右。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11701366.md#1" target="_blank">吐为快：妖共，我不是你的肉盾</a><br></h3>三年内战人海功，强迫农民阵前冲
 匪欲窃国绑人民，党斗政敌怂群众
