--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -16,6 +16,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697525.md#1" target="_blank">一位中国老人的心声：做中华儿女 不当马列子孙</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697525.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/03/1003141612551366-150x120.jpg" align ="left"></a>中央电视台的发言人经常发表演说，强烈谴责外国反华势力粗暴干涉中国内政，现在的中国人也一起跟着骂外国势力，表现着爱国主义。可是谁都没有认真的想一想，什么才是真正的外国反华势力，也就无知的将中共自己才是真正的反华势力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:48 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697465.md#1" target="_blank">王友群：中央政法委在香港制造“暴乱”</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697465.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/1907280059051758-150x120.jpg" align ="left"></a>中共说，香港的“暴乱”是美国的“黑手”和香港的“暴徒”制造出来的。这是彻头彻尾的谎言。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 7:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697043.md#1" target="_blank">程晓容：中共走进死胡同 新疆香港折射全局</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697043.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912020146081501-150x120.jpg" align ="left"></a>为什么说中共把自己逼入了死胡同？新疆和香港的事态足以说明全局。中共在这两个地区采用了同样性质的统治手段：暴力压制和谎言欺骗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:22 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702238.md#1" target="_blank">欧阳天剑：从金三胖的核武态度看共产党的流氓本性</a><br></h3>近日，朝鲜发射了几枚不明飞导，美国4辆侦察机飞过朝鲜半岛上空。世人看到了金三胖根本没有兑现去年以来弃核的承诺，只是如中共一样采用“拖”字诀，以朝鲜民众为人质，与美国作阴阳手段的斗争，企图采用中美贸易战手法，等着川普下台。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 3:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702213.md#1" target="_blank">陆客：找回初心 退出邪党</a><br></h3>初心：我想做条中国龙
 现实：中共是个寄生虫
 初心：我想做个好清官
@@ -57,6 +58,5 @@
 官乏治术民走险，党欲独裁统西东;
 孽海妖凶珠有泪，刀山虎贪恨无穷;
 苟容曲从五斗苦，泣麟悲凤早弃共。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 7:37 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11696854.md#1" target="_blank">洪微：中共的“冷战”从未停止</a><br></h3>众所周知，“冷战”已经在28年前结束了，1991年，前东欧和苏联社会主义阵营解体，那里的人们自主选择了国家的发展体制和道路，西方世界也欢呼了胜利，战争的威胁大大解除了，世界憧憬的和平与繁荣，似乎降临了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:44 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/news392_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_2.htm">http://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
