--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -22,7 +22,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/6/n11571851.md#1" target="_blank">湖南发生火灾 62栋房屋被烧毁267人受灾</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/6/n11571851.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/54b4b5ca413e94308f42222e676f919b-150x120.jpg" align ="left"></a>10月5日晚8点左右，湖南省保靖县葫芦镇葫芦村发生火灾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月07日 2:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/2/n11563813.md#1" target="_blank">台风袭浙江 10多米高巨浪直扑阳台拍摄者</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/2/n11563813.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/bkn-20191002070501461-1002_00952_001_01b-150x120.jpg" align ="left"></a>台风“米娜”于10月1日20时左右在浙江舟山沈家门登陆，登陆时中心附近最大风力11级。东极岛海边掀起十几米高的巨浪。在海边居民楼阳台上，一名正在拍摄的男子，被直扑阳台的巨浪吓得狂躲。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月03日 5:58 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/2/n11563231.md#1" target="_blank">华西村玻璃桥“十一”垮塌 消息被当局封杀</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/2/n11563231.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/Untitled-2-1-150x120.gif" align ="left"></a>曾有所谓“天下第一村”政治符号的江苏省江阴市华西村，“十一”当天，一旅游景点发生严重事故，已至少造成10多人受伤，有网民怀疑受伤人数被“和谐”。怕事件恐带来政治冲击，官方封锁了相关资讯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月02日 11:55 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/9/30/n11558320.md#1" target="_blank">中共续拆佛像 河北58尊摩崖佛像被铲平</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/9/30/n11558320.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/Untitled-2-150x120.gif" align ="left"></a>自从去年5月，中共中央统战部发动所谓整治大型露天宗教造像行动以来，中国各地佛像持续遭灾。河北“世界佛教之光”58尊摩崖石雕惨遭摧毁；两座寺院的800尊罗汉像也被拆光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 5:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/5/n11634752.md#1" target="_blank">深圳宝安国际机场高架桥线缆起火 浓烟滚滚</a><br></h3>11月5日中午12时左右，深圳宝安国际机场一座高架桥起火，暂时未造成人员伤亡。消防部门称，起火点是高架桥下的线缆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 5:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/30/n11621449.md#1" target="_blank">81天无雨土地干裂 江西安徽旱情严重</a><br></h3>七月下旬以来，大陆江西、安徽省持续高温且无降雨。官方称，平均无雨日有81天，江西、安徽各地发生严重旱情，部分地区出现特级旱情，土地龟裂、水稻枯死，农民损失惨重；江河湖库水位持续下级，部分地区出现民众饮水困难。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月30日 4:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/28/n11617418.md#1" target="_blank">延安市车载试验装置突爆炸 至少8死5伤</a><br></h3>10月27日，陕西省延安市延长县一车载试验装置完成试验后，在回程途中突然发生爆炸，导致8死5伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 5:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/27/n11616220.md#1" target="_blank">甘肃深夜发生5.7级地震 民众逃到街上</a><br></h3>28日凌晨2时许，甘肃省甘南藏族自治州夏河县发生5.7级地震。合作市、夏河县震感强烈，并伴有余震，民众纷纷在寒冷的深夜外出避险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 6:53 AM							</td></tr>
