--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -20,7 +20,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11688990.md#1" target="_blank">天地清明引(128) 明光殒－腥风血雨3</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11688990.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/DiezAlbumsArmedRiders_II-150x120.jpg" align ="left"></a>话说刀器、剑器、寒锋三人，快马北上寒刀门，忽见一人一马，急色匆匆而来。寒锋定睛一看，正是门人王五，登时大喝。王五见状，及时勒马，跪地拱手，泣道：“门主、门主，小的终于找到您了。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11696053.md#1" target="_blank">虞国君王见小利忘大义而失国</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11696053.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/a8e7f393ae7092777d0b22dbb4f1402a-150x120.jpg" align ="left"></a>在《论语》中，孔子提出了“君子义以为上”、“见利思义”的观点。在孔子看来，如果要在义利之间做出选择，那么义大于利，道德追求高于利益。不过，古往今来的历史上，仍一直上演着见利忘义、最终结局凄惨的悲剧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 3:11 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703454.md#1" target="_blank">【三国英雄】之六：曹操如何绝地逢生</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703454.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fcd477152def1d25eddbe2860078af63-150x120.jpg" align ="left"></a>这个时候，各个诸侯都在伺机扩大自己的地盘，而曹操仿佛陷入绝境。曹操散尽家财招募的部队在汴水之战中损失殆尽，之后在招募新军的路上又遇上哗变，现在只能寄居在河内。曹操要想发展自己的势力，要解决三个问题......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 12:28 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690707.md#1" target="_blank">【品读唐诗】修行人的乐趣</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690707.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Screen-Shot-2019-11-29-at-5.12.12-PM-150x120.png" align ="left"></a>咱们中华的传统文化，从盘古开天地、女娲造人说起，到三皇五帝创建文明，再到后来，有道家、佛家修炼文化的弘扬，几千年来，可以说我们在天地神明的护佑下，演绎出了辉煌璀璨的文明。因而，传统文化也叫作神传文化。秉性善良的古人，敬天地、拜神佛，保持着高尚纯朴的道德修养；而历史上信佛寻道的修炼人，也同样是层出不穷，他们共同奠定了中华.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 6:26 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690707.md#1" target="_blank">品读唐诗：修行人的乐趣</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690707.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Screen-Shot-2019-11-29-at-5.12.12-PM-150x120.png" align ="left"></a>咱们中华的传统文化，从盘古开天地、女娲造人说起，到三皇五帝创建文明，再到后来，有道家、佛家修炼文化的弘扬，几千年来，可以说我们在天地神明的护佑下，演绎出了辉煌璀璨的文明。因而，传统文化也叫作神传文化。秉性善良的古人，敬天地、拜神佛，保持着高尚纯朴的道德修养；而历史上信佛寻道的修炼人，也同样是层出不穷，他们共同奠定了中华.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 6:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11694728.md#1" target="_blank">荣华富贵的化身 中华螺钿漆器</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11694728.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4ea7ad154878cfa589d6e1693eaf695a-150x120.jpg" align ="left"></a>说起“螺钿漆器”让你联想到什么？自古以来，螺钿漆器就是荣华富贵的化身，是非常精致的工艺。一起来欣赏中华螺钿漆器之美。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695375.md#1" target="_blank">下一个爱因斯坦？9岁童9个月读完大学创纪录</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695375.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/66211d032f36c9521c8e0efa0c5e89ea-150x120.jpg" align ="left"></a>在台湾9岁大的孩子还在念小3，说到大学毕业那是13年后的事情；但比利时男孩9岁的洛朗?西蒙斯（Laurent Simons）虽然也喜欢看电视、也喜欢和他的狗狗玩。不过，他即将在12月从荷兰埃因霍温科技大学毕业，有望成为世界上最年轻的毕业生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 2:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11688960.md#1" target="_blank">天地清明引(127) 明光殒－腥风血雨2</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11688960.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/DiezAlbumsArmedRiders_II-150x120.jpg" align ="left"></a>沉鱼轩主所思不错。侯门果真片刻不待，血洗江湖，所到之处，望风披靡，大小门派无不俯首称降。刀器、剑器、寒锋会合一处，满身挂彩，狼狈不堪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 8:00 AM			</td></tr>
