--- a/gb/news2007_3.md
+++ b/gb/news2007_3.md
@@ -22,7 +22,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11680873.md#1" target="_blank">善举无价 澳慈善家为无家可归者购房</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11680873.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Avalcon-Center-150x120.jpg" align ="left"></a>墨尔本一位富有的女子自上世纪80年代后期以来，一直为无家可归者提供各种帮助。今年她开始为无家可归者购买住房，她表示，房屋有价、善举无价。据《悉尼晨锋报》报导，家住East Malvern的霍尔姆斯（Debbie Holmes）是一位热心公益的慈善家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 4:15 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677626.md#1" target="_blank">【历史回眸】乱世行春秋事 灭共肃谍的戴笠</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677626.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/11/1111260756281944-150x120.jpg" align ="left"></a>近日，中共军事情治官员王立强在澳洲投诚，揭秘中共特工活动对香港、台湾及国际社会的全面、强力渗透，引发全球关注。在中共窃政前，素有蒋介石佩剑之称的军统戴笠，有着超常的灭共肃谍才能，令当时的共匪闻风丧胆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 3:22 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685480.md#1" target="_blank">【花意诗心】菊花 贞秀馨香霜下杰</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685480.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/17e52bb74bbd3a8653fea5808359211c-150x120.jpg" align ="left"></a>时光匆匆，“江涵秋影雁初飞”好像只在昨天，而今却已入冬了。寒气日重，寒风愈劲，草木变衰，众花多已飘零凋残。但菊花却盛开着，许多还都花香浓郁，鲜明耀眼。如同陶渊明在《和郭主簿（其二）》诗中的赞叹，“芳菊开林耀，青松冠岩列。怀此贞秀姿，卓为霜下杰。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 1:31 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693385.md#1" target="_blank">诗歌：嘴硬</a><br></h3>风波未静香江涌， 两派竞争区议员。 民主潮流赢大胜， 自由意志得宏宣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:08 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687689.md#1" target="_blank">浣溪沙．叶问</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/11/20171129_122239-150x120.jpg" align ="left"></a> 家住寒山第几重？ 如霞彩锦炫层峰。 菊花香里共霜浓。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:30 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693379.md#1" target="_blank">七律：好雪</a><br></h3>又是纷扬飞好雪， 苍天着意抚神州。 丰姿飘逸循神韵， 漫舞轻盈任自由。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:02 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693372.md#1" target="_blank">诗歌：悼陈彦霖</a><br></h3>香消玉殒世皆怜， 毒手摧花未雪冤。 血洒尘寰遗愤恨， 尸抛大海化潮仙。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 11:59 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693114.md#1" target="_blank">台湾古典诗：奇迹</a><br></h3> 回流科技正萌芽，带动台湾就业加， 再创四龙奇迹造，振兴经济福邦家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 8:11 PM			</td></tr>
