--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -22,6 +22,13 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683841.md#1" target="_blank">海风：神韵令中共自信尽失</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683841.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/20190120-1pm-NYC-shenyun-150x120.jpg" align ="left"></a>说到神韵，全球海外华人应该都不陌生。但大家了解更多的是神韵在全球演出的票房率很高，节目精彩夺目，主要艺术家为法轮功学员，对于其它的情况可能是知之甚少。尤其是对中共多年来为封杀神韵所做的种种恶事丑事，更是鲜为人知。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 5:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682689.md#1" target="_blank">程晓容：“止暴制乱”—中共的洗脑谎言</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/191027221639100615-150x120.jpg" align ="left"></a>中共在香港集中上演了种种暴力，因为暴力是中共的一大遗传基因，中共的执政史就是一部杀人史。所以，它宣扬的“止暴”，是倒打一耙的流氓笑话。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:56 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684044.md#1" target="_blank">乾元：告海外华人书</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684044.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/190612083448100311-600x400-1-150x120.jpg" align ="left"></a>近日来，中共在香港逐渐脱下伪善的外衣，数万名伪装成港警的内地军警进入香港，采用各种高科技的暴力手段镇压学生，甚至制造多起“被自杀”、性侵、酷刑案例。种种暴行，在国际网络上传出，场面令人惊愕，行径令人发指，观之者无不动容，甚至有德国战地记者Enno Lenze亦说，“港警比ISIS更可怕”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:50 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11688735.md#1" target="_blank">弧度：谁逼迫美利坚祭出终极大杀器</a><br></h3>被奴役了五千年的民族
+从未像今天这样扬眉吐气
+香港胜利的呼声响彻天籁
+魔兽们蜷缩在魔域里抽搐颤抖
+慌了，乱了，彻底歇菜了
+财产被冻结，子女被遣返
+这就是越作越死者的必然下场......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:29 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687981.md#1" target="_blank">伍新：此线抽头天拆谍网——王立强叛逃感言</a><br></h3>一谍叛逃澳洲亮，北极风响党脊梁。
 连夜臭骂诈骗犯，忠诚洗脑药换汤。
 罔顾王立强虚实，伪造判决书穿帮。
@@ -65,9 +72,5 @@
 清光照得专制慌，乱射烟幕去遮挡；
 转见新月又挂苍，赵家无措心抓狂；
 更烦无数黑天鹅，越黑越飞没法防。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:38 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684206.md#1" target="_blank">吐为快：选票见证民主香</a><br></h3>鱼目混珠徒为妄，大劫洗浴珠更亮;
-干儿丑戏跌下场，傀儡禁蒙违宪章;
-鲜血浇灌花更芳，荣光必定归香港;
-土共且收臭皮囊，耻叫世人戳脊梁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/news392_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/news392_5.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/news392_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/news392_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_5.htm">http://www.epochtimes.com/gb/news392_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
